--- a/React/final_react_project/src/Components/Home/Navbare/Navbare.css
+++ b/React/final_react_project/src/Components/Home/Navbare/Navbare.css
@@ -46,12 +46,15 @@
   border-radius: 70px;
   padding: 5px 10px 5px 10px;
   margin-left: 10px;
+  width: 100%;
 }
 .search-button i {
   font-size: 19px;
+
 }
 .close-button {
   margin-top: 4px;
+
 }
 #favoriteScrollingDropdown {
   background-color: transparent;
